// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticateOps Classic Tests getTokens() 0: Authenticate successfully as user 1`] = `
{
  "bearerToken": undefined,
  "host": "http://openam-frodo-dev.classic.com:8080/am",
  "realm": "/",
  "subject": Any<String>,
  "userSessionToken": {
    "expires": 1753976145000,
    "from_cache": false,
    "realm": "/",
    "successUrl": "/am/console",
    "tokenId": "pQvEBlVtlKosCXrta1USewzkja4.*AAJTSQACMDEAAlNLABwrS0Z0bzBaUkRHbkxiVEtYaTJ6b1NISWZVWXc9AAR0eXBlAANDVFMAAlMxAAA.*",
  },
}
`;

exports[`AuthenticateOps Classic Tests getTokens() 0: Authenticate successfully as user 2`] = `"iPlanetDirectoryPro"`;

exports[`AuthenticateOps Classic Tests getTokens() 0: Authenticate successfully as user 3`] = `"pQvEBlVtlKosCXrta1USewzkja4.*AAJTSQACMDEAAlNLABwrS0Z0bzBaUkRHbkxiVEtYaTJ6b1NISWZVWXc9AAR0eXBlAANDVFMAAlMxAAA.*"`;

exports[`AuthenticateOps Classic Tests getTokens() 1: Authenticate successfully using Amster credentials 1`] = `
{
  "bearerToken": undefined,
  "host": "http://openam-frodo-dev.classic.com:8080/am",
  "realm": "/",
  "subject": Any<String>,
  "userSessionToken": {
    "expires": 1753976145000,
    "from_cache": false,
    "realm": "/",
    "successUrl": "/am/console",
    "tokenId": "ZGWH6Y3tQsC3rhZHbyjFrn8USBw.*AAJTSQACMDEAAlNLABxHYW5GT1FRREtuTmhLeDRsLzBFUXdyRmU2NHc9AAR0eXBlAANDVFMAAlMxAAA.*",
  },
}
`;

exports[`AuthenticateOps Classic Tests getTokens() 1: Authenticate successfully using Amster credentials 2`] = `"iPlanetDirectoryPro"`;

exports[`AuthenticateOps Classic Tests getTokens() 1: Authenticate successfully using Amster credentials 3`] = `"ZGWH6Y3tQsC3rhZHbyjFrn8USBw.*AAJTSQACMDEAAlNLABxHYW5GT1FRREtuTmhLeDRsLzBFUXdyRmU2NHc9AAR0eXBlAANDVFMAAlMxAAA.*"`;

exports[`AuthenticateOps Classic Tests getTokens() 2: Authenticate successfully using alternative Amster subject and service 1`] = `
{
  "bearerToken": undefined,
  "host": "http://openam-frodo-dev.classic.com:8080/am",
  "realm": "/",
  "subject": Any<String>,
  "userSessionToken": {
    "expires": 1753976145000,
    "from_cache": false,
    "realm": "/",
    "successUrl": "/am/console",
    "tokenId": "JGVIkcoOtEcCAKTr1g9eUuzmwyk.*AAJTSQACMDEAAlNLABx5Z0NLOFRpbTYzTGRSNHdWM0Z3NElsSUZtODA9AAR0eXBlAANDVFMAAlMxAAA.*",
  },
}
`;

exports[`AuthenticateOps Classic Tests getTokens() 2: Authenticate successfully using alternative Amster subject and service 2`] = `"iPlanetDirectoryPro"`;

exports[`AuthenticateOps Classic Tests getTokens() 2: Authenticate successfully using alternative Amster subject and service 3`] = `"JGVIkcoOtEcCAKTr1g9eUuzmwyk.*AAJTSQACMDEAAlNLABx5Z0NLOFRpbTYzTGRSNHdWM0Z3NElsSUZtODA9AAR0eXBlAANDVFMAAlMxAAA.*"`;
